# myminimalpy

./: .gitignore  README.md  pyproject.toml  python-package.sh
docs/: conf.py  index.rst
src/myminimalpy/: solvers.py
